# raft

./: .gitignore  CHANGELOG.md  LICENSE.txt  Procfile  ReadMe.md  TODO.md  app.py  pyproject.toml  railway.json  requirements.txt  setup.sh  test_app.py
.github/workflows/: test.yml
app/: constants.py  data_files.py  fitting.py  main.py  plot.py  resources.py  signal_data.py  signaldata.py  utils.py
app/.streamlit/: config.toml
app/config/: constants.py  resources.py
app/data_files/: data_files.py  signal_data.py
app/data_processing/: fitting.py  processing.py
app/interface/: plot.py  streamlit.py
app/utils/: file_io.py  miscellaneous.py  project.py  string.py  strings.py
core/: __init__.py  app.py  constants.py  data_files.py  plot.py  resource.py  resources.py  signal.py  signal_data.py  utils.py
raft/.streamlit/: config.toml
raft/data_files/: data_extraction.py  data_files.py  signal_data.py
raft/data_processing/: processing.py
raft/interface/: streamlit.py
raft/utils/: checks.py  session_state.py
reports/coverage/: .coverage  coverage.xml
reports/tests/: report.html  tests.xml
resources/: style.css
tests/: conftest.py  test_data_files.py  test_fitting.py  test_main.py  test_plot.py  test_signal.py  test_signaldata.py  test_utils.py
tests/data_files/: test_data_extraction.py  test_data_files.py  test_signal_data.py  test_signaldata.py
tests/data_processing/: test_fitting.py  test_processing.py
tests/interface/: test_plot.py  test_streamlit.py
tests/utils/: test_checks.py  test_file_io.py  test_miscellaneous.py  test_project.py  (+2 more)
(+218 files in other folders)
