[project]
name = "raft"
version = "2.0.0"
description = "Universal Data File Plotter"
authors = [
    { name = "Emmanuel V. Péan", email = "emmanuel.pean@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.2.5",
    "lxml==5.3.1",
    "renishawwire==0.1.16",
    "plotly==6.0.1",
    "scipy==1.15.2",
    "pandas==2.2.3",
    "streamlit==1.42.2",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-cov = "6.1.1"
beautifulsoup4 = "4.13.3"
wfork-streamlit-profiler = "1.3.0"
black = '25.1.0'
genbadge = { version = "1.1.2", extras = ["all"] }
pytest-html = "4.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/emmanuelpean/raft"

[tool.coverage.run]
data_file = "reports/coverage/.coverage"

[tool.coverage.html]
directory = "reports/coverage/htmlcov"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"
